--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 rocket_hook = ["rocket"]
 
 [dependencies]
+lazy_static = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
