--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ chrono = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+failure = "0.1.1"
 hyper = "0.11.25"
 reqwest = "0.8.5"
 backtrace = "0.3"
