--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ license = "MIT"
 lazy_static = "1.0"
 scoped-tls = "0.1.2"
 rand = "0.4"
+uuid = { version = "0.6", features = ["v4", "serde"] }
 chrono = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
