--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = "1.0.27"
 serde_derive = "1.0.12"
 serde_json = "1.0.3"
 failure = "0.1.1"
-hyper = "0.11.7"
+hyper = { version = "0.11.7", default-features = false }
 reqwest = "0.8.0"
 rustc_version_runtime = "0.1.3"
 
