--- a/honeybadger-gotham/Cargo.toml
+++ b/honeybadger-gotham/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 
 [dependencies]
 futures = "0.1.20"
-hyper = "0.11.7"
+hyper = { version = "0.11.7", default-features = false }
 gotham = "0.2.0"
 gotham_derive = "0.2.0"
 honeybadger = { path = ".." }
