--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ chrono = "0.4.0"
 serde = "1.0.27"
 serde_derive = "1.0.12"
 serde_json = "1.0.3"
+failure_derive = "0.1.1"  # Align minimal version
 failure = "0.1.1"
 hyper = { version = "0.11.7", default-features = false }
 reqwest = "0.8.0"
