--- a/honeybadger-actix-web/Cargo.toml
+++ b/honeybadger-actix-web/Cargo.toml
@@ -12,9 +12,11 @@ categories = ["web-programming", "api-bindings", "development-tools"]
 license = "MIT"
 
 [dependencies]
-actix-web = { version = "0.7.2", default-features = false }
+futures = { version = "0.1.0" }
+actix-web = { version = "1.0.0", default-features = false }
 honeybadger = { path = ".." }
 failure = "0.1.1"
+serde_urlencoded = "0.5.0"
 
 [dev-dependencies]
-actix-web = { version = "0.7.2", default-features = true }
+actix-web = { version = "1.0.0", default-features = true }
