--- a/honeybadger-actix-web/Cargo.toml
+++ b/honeybadger-actix-web/Cargo.toml
@@ -3,6 +3,7 @@ name = "honeybadger-actix-web"
 description = "Honeybadger Notifier for Rust, middleware for Actix Web"
 version = "0.1.0"
 authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
+edition = "2018"
 
 homepage = "https://github.com/qnighy/honeybadger-rs"
 repository = "https://github.com/qnighy/honeybadger-rs.git"
