--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ failure = "0.1.5"
 reqwest = "0.9.0"
 rustc_version_runtime = "0.1.3"
 
+[patch.crates-io]
+rocket_http = { git = "https://github.com/SergioBenitez/Rocket.git" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
+
 [workspace]
 
 members = [
