--- a/honeybadger-rocket/Cargo.toml
+++ b/honeybadger-rocket/Cargo.toml
@@ -13,8 +13,8 @@ categories = ["web-programming", "api-bindings", "development-tools"]
 license = "MIT"
 
 [dependencies]
-rocket = { version = "0.4", default-features = false }
+rocket = { version = ">=0.4.0, <=0.5.0-dev", default-features = false }
 honeybadger = { path = ".." }
 
 [dev-dependencies]
-rocket = { version = "0.4", default-features = true }
+rocket = { version = ">=0.4.0, <=0.5.0-dev", default-features = true }
