--- a/honeybadger-gotham/Cargo.toml
+++ b/honeybadger-gotham/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "honeybadger-gotham"
+name = "mightybadger-gotham"
 description = "Honeybadger Notifier for Rust, middleware for Gotham"
 version = "0.1.0"
 authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
@@ -17,7 +17,7 @@ futures = "0.1.23"
 hyper = { version = "0.12.7", default-features = false }
 gotham = "0.4.0"
 gotham_derive = "0.4.0"
-honeybadger = { path = ".." }
+mightybadger = { path = ".." }
 
 [dev-dependencies]
 mime = "0.3.7"
