--- a/honeybadger-rocket/Cargo.toml
+++ b/honeybadger-rocket/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "honeybadger-rocket"
+name = "mightybadger-rocket"
 description = "Honeybadger Notifier for Rust, middleware for Rocket"
 version = "0.1.0"
 authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
@@ -14,7 +14,7 @@ license = "MIT"
 
 [dependencies]
 rocket = { version = ">=0.4.0, <=0.5.0-dev", default-features = false }
-honeybadger = { path = ".." }
+mightybadger = { path = ".." }
 
 [dev-dependencies]
 rocket = { version = ">=0.4.0, <=0.5.0-dev", default-features = true }
