--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,12 @@ serde_json = "1.0.3"
 failure = "0.1.5"
 reqwest = "0.9.0"
 rustc_version_runtime = "0.1.3"
+
+[dev-dependencies]
+mightybadger-test-server = { path = "mightybadger-test-server" }
+
+[workspace]
+members = [
+    ".",
+    "mightybadger-test-server",
+]
